--- a/charts/blip-extension-builder-by-gpt/templates/secrets.yaml
+++ b/charts/blip-extension-builder-by-gpt/templates/secrets.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "PLUGIN_NAME.fullname" $root }}-{{ $name | lower }}
+  name: {{ template "blip-extension-builder-by-gpt.fullname" $root }}-{{ $name | lower }}
 data:
   {{- range $key, $value := $values }}
   {{ $key }}: {{ $value | b64enc }}
