Basic form and API request

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,22 +21,24 @@
 	},
 	"plugins": ["react", "prettier", "import", "jsx-a11y", "react-hooks"],
 	"rules": {
+		"no-unused-vars": "warn",
+		"no-undef": "warn",
 		"no-console": "warn",
-		"no-var": "error",
+		"no-var": "warn",
 		"no-extra-boolean-cast": "off",
 		"no-underscore-dangle": "off",
 		"no-plusplus": "off",
 		"no-use-before-define": "off",
-		"no-param-reassign": ["error", { "props": false }],
+		"no-param-reassign": ["warn", { "props": false }],
 		"radix": "off",
 		"consistent-return": "off",
 		"import/prefer-default-export": "off",
-		"semi": ["error", "always"],
-		"comma-dangle": ["error", "never"],
-		"curly": ["error", "all"],
-		"indent": ["error", 4, { "SwitchCase": 1 }],
+		"semi": ["warn", "always"],
+		"comma-dangle": ["warn", "never"],
+		"curly": ["warn", "all"],
+		"indent": ["warn", 4, { "SwitchCase": 1 }],
 		"camelcase": [
-			"error",
+			"warn",
 			{
 				"properties": "always",
 				"ignoreImports": true,
